--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -32,7 +32,7 @@
                                   <RowConstraints maxHeight="172.0" minHeight="50.0" percentHeight="39.0" prefHeight="172.0" vgrow="ALWAYS" />
                                 </rowConstraints>
                                  <children>
-                                    <TableView fx:id="productsTable" editable="true" onKeyPressed="#onFocusedProductTableItem" onMousePressed="#handleProductTableMousePressed" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                                    <TableView fx:id="productsTable" editable="true" onKeyPressed="#productsMoveUpDownByKeyboard" onMousePressed="#handleProductTableMousePressed" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                                       <columns>
                                           <TableColumn maxWidth="20.0" minWidth="20.0" prefWidth="20.0" resizable="false" text="..." visible="false" />
                                           <TableColumn fx:id="productArticle" maxWidth="-1.0" minWidth="100.0" prefWidth="200.0" text="Артикул" />
@@ -84,7 +84,7 @@
                                                          <children>
                                                             <AnchorPane GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                                                                <children>
-                                                                  <HBox AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+                                                                  <HBox disable="true" visible="false" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                                                      <children>
                                                                         <AnchorPane>
                                                                            <children>
@@ -120,7 +120,7 @@
                                                    <children>
                                                       <AnchorPane minWidth="-Infinity" prefWidth="360.0" HBox.hgrow="ALWAYS">
                                                          <children>
-                                                            <TableView fx:id="analogsTable" editable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
+                                                            <TableView fx:id="analogsTable" editable="true" onMousePressed="#handleAnalogTableMousePressed" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
                                                               <columns>
                                                                 <TableColumn fx:id="analogTitle" prefWidth="210.0" text="Аналог" />
                                                                 <TableColumn fx:id="analogVendor" prefWidth="143.0" text="Производитель" />
@@ -232,7 +232,7 @@
                                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                                         </rowConstraints>
                                                          <children>
-                                                            <TableView fx:id="deliveryTable" maxHeight="50.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                                                            <TableView fx:id="deliveryTable" editable="true" maxHeight="50.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                                                               <columns>
                                                                 <TableColumn fx:id="deliveryTime" prefWidth="100.0" text="Срок доставки" />
                                                               </columns>
@@ -275,7 +275,7 @@
                                                    <children>
                                                       <StackPane fx:id="stackPane" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                                          <children>
-                                                            <TreeView fx:id="categoriesTree" onMouseClicked="#handleCategoryTreeMouseClicked">
+                                                            <TreeView fx:id="categoriesTree" onMouseClicked="#handleCategoryTreeMouseClicked" prefHeight="230.0">
                                                                <opaqueInsets>
                                                                   <Insets left="5.0" />
                                                                </opaqueInsets>
@@ -289,7 +289,7 @@
                                                 </AnchorPane>
                                                 <AnchorPane>
                                                    <children>
-                                                      <TableView fx:id="vendorsTable" onMousePressed="#handleVendorsTableMousePressed" prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                      <TableView fx:id="vendorsTable" onMousePressed="#handleVendorsTableMousePressed" prefHeight="230.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                         <columns>
                                                           <TableColumn fx:id="vendorsTitleColumn" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="150.0" text="Производитель" />
                                                           <TableColumn fx:id="vendorsAddressColumn" minWidth="70.0" text="Страна" />
@@ -300,6 +300,19 @@
                                                          </columnResizePolicy>
                                                          <contextMenu>
                                                             <ContextMenu fx:id="vendorsTableContextMenu" />
+                                                         </contextMenu>
+                                                      </TableView>
+                                                   </children>
+                                                </AnchorPane>
+                                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                                                   <children>
+                                                      <TableView fx:id="seriesTable" onMousePressed="#handleSeriesTableMousePressed" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+                                                        <columns>
+                                                          <TableColumn fx:id="serieTableColumn" prefWidth="192.0" text="Серия" />
+                                                          <TableColumn fx:id="serieVendorTableColumn" prefWidth="183.0" text="Производитель" />
+                                                        </columns>
+                                                         <contextMenu>
+                                                            <ContextMenu fx:id="seriesTableContextMenu" />
                                                          </contextMenu>
                                                       </TableView>
                                                    </children>
@@ -993,7 +1006,7 @@
                                                 </AnchorPane>
                                                 <AnchorPane prefHeight="212.0" prefWidth="512.0" VBox.vgrow="ALWAYS">
                                                    <children>
-                                                      <GridPane layoutX="118.0" layoutY="-1.0" prefHeight="213.0" prefWidth="373.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0">
+                                                      <GridPane disable="true" layoutX="118.0" layoutY="-1.0" prefHeight="213.0" prefWidth="373.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="-1.0">
                                                         <columnConstraints>
                                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="259.0" minWidth="10.0" percentWidth="90.0" prefWidth="259.0" />
                                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" percentWidth="10.0" prefWidth="33.0" />
