--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -34,7 +34,7 @@
                                  <children>
                                     <TableView fx:id="productsTable" editable="true" onKeyPressed="#productsMoveUpDownByKeyboard" onMousePressed="#handleProductTableMousePressed" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                                       <columns>
-                                          <TableColumn maxWidth="20.0" minWidth="20.0" prefWidth="20.0" resizable="false" text="..." visible="false" />
+                                          <TableColumn fx:id="productAvailable" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" resizable="false" text="Сайт" />
                                           <TableColumn fx:id="productArticle" maxWidth="-1.0" minWidth="100.0" prefWidth="200.0" text="Артикул" />
                                         <TableColumn fx:id="productTitle" maxWidth="-1.0" minWidth="300.0" prefWidth="300.0" text="Наименование" />
                                         <TableColumn fx:id="productDescription" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Краткое описание" />
@@ -84,11 +84,11 @@
                                                          <children>
                                                             <AnchorPane GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                                                                <children>
-                                                                  <HBox disable="true" visible="false" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
+                                                                  <HBox AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                                                                      <children>
                                                                         <AnchorPane>
                                                                            <children>
-                                                                              <Button fx:id="resetButton" disable="true" mnemonicParsing="false" onAction="#resetProgram" text="Сброс" textFill="RED" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                                                                              <Button fx:id="resetButton" mnemonicParsing="false" onAction="#resetProgram" text="Сброс" textFill="RED" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                                                                  <font>
                                                                                     <Font name="System Bold" size="12.0" />
                                                                                  </font>
