--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -1168,6 +1168,47 @@
                                                       </GridPane>
                                                    </children>
                                                 </AnchorPane>
+                                                <AnchorPane>
+                                                   <children>
+                                                      <Label text="Экспорт данных в XLS-файл" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                         <font>
+                                                            <Font name="System Bold" size="20.0" />
+                                                         </font>
+                                                      </Label>
+                                                   </children>
+                                                </AnchorPane>
+                                                <AnchorPane>
+                                                   <children>
+                                                      <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                        <columnConstraints>
+                                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                        </columnConstraints>
+                                                        <rowConstraints>
+                                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                        </rowConstraints>
+                                                         <children>
+                                                            <AnchorPane GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BASELINE" GridPane.vgrow="ALWAYS">
+                                                               <children>
+                                                                  <HBox alignment="BASELINE_LEFT" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                                                                     <children>
+                                                                        <ComboBox fx:id="tableDBForExportComboBox" minWidth="180.0" onAction="#getSelectedDBTable" prefWidth="180.0" promptText="Экспорт таблицы БД" />
+                                                                        <Label alignment="CENTER" minWidth="200.0" text=" в файл формата XLS: " HBox.hgrow="ALWAYS" />
+                                                                        <Button fx:id="chooseFileForExportButton" minWidth="140.0" mnemonicParsing="false" onAction="#chooseDirectoryForExport" text="Выбрать папку для экспорта" HBox.hgrow="ALWAYS" />
+                                                                        <AnchorPane HBox.hgrow="ALWAYS">
+                                                                           <children>
+                                                                              <Label fx:id="fileForExportPathLabel" maxWidth="1.7976931348623157E308" minWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" />
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <TextField fx:id="exportFileNameTextField" promptText="имя файла..." />
+                                                                        <Button fx:id="startExportButton" minWidth="55.0" mnemonicParsing="false" onAction="#startExport" text="Пуск!" HBox.hgrow="ALWAYS" />
+                                                                     </children>
+                                                                  </HBox>
+                                                               </children>
+                                                            </AnchorPane>
+                                                         </children>
+                                                      </GridPane>
+                                                   </children>
+                                                </AnchorPane>
                                              </children>
                                           </VBox>
                                        </children>
